--- a/runtime/package.json
+++ b/runtime/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "opengfx",
-  "private": true,
+  "name": "@yourdash/opengfx-runtime",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@webgpu/types": "^0.1.42",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   },
