--- a/console-runtime/tsconfig.json
+++ b/console-runtime/tsconfig.json
@@ -15,7 +15,9 @@
     "noEmit": true,
 
     /* Linting */
-    "strict": true
+    "strict": true,
+
+    "jsx": "react"
   },
   "include": ["src"]
 }
